// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get all Ads 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "http://localhost:3001",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Array [
    Object {
      "_id": "6070af1694e2e3a8a1c47bb4",
      "title": "Hello, now from the in-memory database!",
    },
    Object {
      "_id": "6070afed94e2e3a8a1c47bb6",
      "price": 10.5,
      "title": "Pizza",
    },
    Object {
      "_id": "6070b15e94e2e3a8a1c47bb7",
      "price": 10.5,
      "title": "Pizza",
    },
    Object {
      "_id": "6070b1e494e2e3a8a1c47bb8",
      "price": 10.5,
      "title": "Pizza",
    },
    Object {
      "_id": "6070b4f294e2e3a8a1c47bb9",
      "price": 10.5,
      "title": "Pizza",
    },
  ],
  "headers": Object {
    "content-length": "342",
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Insert a new Ad 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "data": "{\\"title\\":\\"Pizza\\",\\"price\\":10.5}",
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "http://localhost:3001",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "message": "New ad inserted.",
  },
  "headers": Object {
    "content-length": "30",
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 200,
  "statusText": "OK",
}
`;
